recursion.cons.lessons.recursion.cons.Last.scala.code
def last(l:List[Int]): Int = {
	for(i <- 0 to l.length-2)
	{
		
	}
	return l(l.ength-1)
}
